project2/force-app/main/default/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <description>User&apos;s bid on listing (Product)</description>
    <label>Bid</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Bid ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>