project2/force-app/main/default/objects/Bid__c/fields/Bidder__c.field-meta.xml
<CustomField>
    <fullName>Bidder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bidder</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>